K8s/web-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redis-chat
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: redis-chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: splex7/redis-node-chat:latest # 적절한 이미지로
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: app-volume
              mountPath: /app
      volumes:
        - name: app-volume
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: redis-chat
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort # 혹은 LoadBalancer로 변경할 수 있습니다.
