K8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: redis-chat2
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer # 혹은 LoadBalancer로 변경할 수 있습니다.
